add training day features

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   color: rgb(255, 255, 255);
   background-color: #242424;
+  box-sizing: border-box;
+  --padding: .4rem .8rem;
 }
 
 body {
@@ -14,18 +16,83 @@ body {
   min-height: 100vh;
 }
 
-button.add-day {
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+}
+
+button.button {
   background-color: transparent;
   border: 2px solid white;
+  border-radius: 8px;
   color: inherit;
   font-weight: bold;
-  border-radius: 8px;
-  padding: .4rem .8rem;
+  padding: var(--padding);
   cursor: pointer;
   transition: all 0.2s;
-
+  
   &:hover {
     color: black;
     background-color: rgb(255, 255, 255);
   }
 }
+
+.training-cycle {
+  & h2 {
+    margin: 0;
+  }
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  button.add-day {
+    width: 100%;
+  }
+}
+
+.days-cycle-list {
+  gap: 1rem;
+}
+
+.training-day {
+  gap: 1rem;
+
+  & span {
+    font-weight: bold;
+  }
+
+  & input {
+    border: 2px solid #abacaf;
+    background: transparent;
+    color: inherit;
+    appearance: none;
+    border-radius: 8px;
+    padding: var(--padding);
+    transition: all .2s ease;
+
+    &:hover, &:focus {
+      border-color: #fff
+    }
+
+    &:focus{
+      outline: 0;
+    }
+  }
+
+  & button {
+    border-color: #abacaf;
+
+    &:hover {
+      border-color: #fff;
+    }
+  }
+}
+
+
+
