--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,11 @@ body {
   align-items: center;
 }
 
-button.button {
+.full-width {
+  width: 100%;
+}
+
+button {
   background-color: transparent;
   border: 2px solid white;
   border-radius: 8px;
@@ -41,58 +45,3 @@ button.button {
     background-color: rgb(255, 255, 255);
   }
 }
-
-.training-cycle {
-  & h2 {
-    margin: 0;
-  }
-
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  button.add-day {
-    width: 100%;
-  }
-}
-
-.days-cycle-list {
-  gap: 1rem;
-}
-
-.training-day {
-  gap: 1rem;
-
-  & span {
-    font-weight: bold;
-  }
-
-  & input {
-    border: 2px solid #abacaf;
-    background: transparent;
-    color: inherit;
-    appearance: none;
-    border-radius: 8px;
-    padding: var(--padding);
-    transition: all .2s ease;
-
-    &:hover, &:focus {
-      border-color: #fff
-    }
-
-    &:focus{
-      outline: 0;
-    }
-  }
-
-  & button {
-    border-color: #abacaf;
-
-    &:hover {
-      border-color: #fff;
-    }
-  }
-}
-
-
-
