--- a/src/components/TrainingDay/style.css
+++ b/src/components/TrainingDay/style.css
@@ -12,13 +12,14 @@
     appearance: none;
     border-radius: 8px;
     padding: var(--padding);
-    transition: all .2s ease;
+    transition: all 0.2s ease;
 
-    &:hover, &:focus {
-      border-color: #fff
+    &:hover,
+    &:focus {
+      border-color: #fff;
     }
 
-    &:focus{
+    &:focus {
       outline: 0;
     }
   }
